{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 126,
  "lineage": "65f72d24-240e-c78e-b7e0-bdd3b61103c5",
  "resources": [
    {
      "module": "module.mongodb_instance",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:subnet/subnet-00d4b7c3a4411c021",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.21.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d4b7c3a4411c021",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "285729811195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "tags": {
              "Environment": "DEV",
              "Name": "Roboshop-DEV-db-us-east-1a",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00b3511d793dc2fd3"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "id"
              }
            ]
          ]
        }
      ]
    },
    {
      "module": "module.mongodb_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09c813fb71547fc4f",
            "arn": "arn:aws:ec2:us-east-1:285729811195:instance/i-088338918f086b4ac",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-088338918f086b4ac",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06e5e25a8a1c9c9fa",
            "private_dns": "ip-10-0-21-102.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.21.102",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-099d3a38bd0a16935",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d4b7c3a4411c021",
            "tags": {
              "Environment": "DEV",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Environment": "DEV",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "vpc_security_group_ids": [
              "sg-028309d3912210305",
              "sg-0f88d897584d318b2"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_security_group_ids"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "subnet_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ami.amazon_linux_Redhat",
            "data.aws_ssm_parameter.database_subnet_ids",
            "data.aws_ssm_parameter.mongodb_sg_id",
            "module.mongodb_instance.aws_iam_instance_profile.this",
            "module.mongodb_instance.aws_iam_role.this",
            "module.mongodb_instance.aws_security_group.this",
            "module.mongodb_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.mongodb_instance.data.aws_partition.current",
            "module.mongodb_instance.data.aws_ssm_parameter.this",
            "module.mongodb_instance.data.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.mongodb_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:security-group/sg-0f88d897584d318b2",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f88d897584d318b2",
            "ingress": [],
            "name": "-20250704051017761600000001",
            "name_prefix": "-",
            "owner_id": "285729811195",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "DEV",
              "Name": "",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b3511d793dc2fd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.database_subnet_ids",
            "module.mongodb_instance.data.aws_subnet.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.mongodb_instance",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:security-group-rule/sgr-098dfd029888ebaae",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-098dfd029888ebaae",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0f88d897584d318b2",
            "security_group_rule_id": "sgr-098dfd029888ebaae",
            "tags": {
              "Environment": "DEV",
              "Name": "-ipv4_default",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "-ipv4_default",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.database_subnet_ids",
            "module.mongodb_instance.aws_security_group.this",
            "module.mongodb_instance.data.aws_subnet.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:security-group-rule/sgr-0a63b0b2db9c8c79a",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-0a63b0b2db9c8c79a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0f88d897584d318b2",
            "security_group_rule_id": "sgr-0a63b0b2db9c8c79a",
            "tags": {
              "Environment": "DEV",
              "Name": "-ipv6_default",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "-ipv6_default",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.database_subnet_ids",
            "module.mongodb_instance.aws_security_group.this",
            "module.mongodb_instance.data.aws_subnet.this"
          ]
        }
      ]
    }
  ]
}